Partial merge from https://github.com/mwiede/jsch with some fixes