@@ -32,8 +32,16 @@ package com.jcraft.jsch;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.OutputStream;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public abstract class KeyPair {
+
+    public static final int DEFERRED = -1;
     public static final int ERROR = 0;
     public static final int DSA = 1;
     public static final int RSA = 2;
@@ -44,23 +52,33 @@ public abstract class KeyPair {
     static final int VENDOR_FSECURE = 1;
     static final int VENDOR_PUTTY = 2;
     static final int VENDOR_PKCS8 = 3;
+    static final int VENDOR_OPENSSH_V1 = 4;
 
     int vendor = VENDOR_OPENSSH;
 
+    private static final byte[] AUTH_MAGIC = Util.str2byte("openssh-key-v1\0");
     private static final byte[] cr = Util.str2byte("\n");
 
-    public static KeyPair genKeyPair(JSch jsch, int type) throws JSchException {
+    public static KeyPair genKeyPair(final JSch jsch, final int type) throws JSchException {
         return genKeyPair(jsch, type, 1024);
     }
 
-    public static KeyPair genKeyPair(JSch jsch, int type, int key_size) throws JSchException {
-        KeyPair kpair = null;
-        if (type == DSA) {
-            kpair = new KeyPairDSA(jsch);
-        } else if (type == RSA) {
-            kpair = new KeyPairRSA(jsch);
-        } else if (type == ECDSA) {
-            kpair = new KeyPairECDSA(jsch);
+    public static KeyPair genKeyPair(final JSch jsch, final int type, final int key_size)
+            throws JSchException {
+        final KeyPair kpair;
+        switch (type) {
+            case DSA:
+                kpair = new KeyPairDSA(jsch);
+                break;
+            case RSA:
+                kpair = new KeyPairRSA(jsch);
+                break;
+            case ECDSA:
+                kpair = new KeyPairECDSA(jsch);
+                break;
+            default:
+                kpair = null;
+                break;
         }
         if (kpair != null) {
             kpair.generate(key_size);
@@ -74,11 +92,15 @@ public abstract class KeyPair {
 
     abstract byte[] getEnd();
 
-    abstract int getKeySize();
+    public abstract int getKeySize();
 
     public abstract byte[] getSignature(byte[] data);
 
+    public abstract byte[] getSignature(byte[] data, String alg);
+
     public abstract Signature getVerifier();
+
+    public abstract Signature getVerifier(String alg);
 
     public abstract byte[] forSSHAgent() throws JSchException;
 
@@ -86,20 +108,23 @@ public abstract class KeyPair {
         return publicKeyComment;
     }
 
-    public void setPublicKeyComment(String publicKeyComment) {
+    public void setPublicKeyComment(final String publicKeyComment) {
         this.publicKeyComment = publicKeyComment;
     }
 
     protected String publicKeyComment = "no comment";
 
-    JSch jsch = null;
-    private Cipher cipher;
+    final JSch jsch;
+    protected Cipher cipher;
     private HASH hash;
     private Random random;
 
     private byte[] passphrase;
 
-    public KeyPair(JSch jsch) {
+    protected String kdfName;
+    protected byte[] kdfOptions;
+
+    public KeyPair(final JSch jsch) {
         this.jsch = jsch;
     }
 
@@ -112,9 +137,9 @@ public abstract class KeyPair {
      * Writes the plain private key to the given output stream.
      *
      * @param out output stream
-     * @see #writePrivateKey(java.io.OutputStream out, byte[] passphrase)
+     * @see #writePrivateKey(OutputStream out, byte[] passphrase)
      */
-    public void writePrivateKey(java.io.OutputStream out) {
+    public void writePrivateKey(final OutputStream out) {
         this.writePrivateKey(out, null);
     }
 
@@ -124,17 +149,17 @@ public abstract class KeyPair {
      * @param out        output stream
      * @param passphrase a passphrase to encrypt the private key
      */
-    public void writePrivateKey(java.io.OutputStream out, byte[] passphrase) {
+    public void writePrivateKey(final OutputStream out, byte[] passphrase) {
         if (passphrase == null)
             passphrase = this.passphrase;
 
-        byte[] plain = getPrivateKey();
-        byte[][] _iv = new byte[1][];
-        byte[] encoded = encrypt(plain, _iv, passphrase);
+        final byte[] plain = getPrivateKey();
+        final byte[][] _iv = new byte[1][];
+        final byte[] encoded = encrypt(plain, _iv, passphrase);
         if (encoded != plain)
             Util.bzero(plain);
-        byte[] iv = _iv[0];
-        byte[] prv = Util.toBase64(encoded, 0, encoded.length);
+        final byte[] iv = _iv[0];
+        final byte[] prv = Util.toBase64(encoded, 0, encoded.length, true);
 
         try {
             out.write(getBegin());
@@ -143,9 +168,9 @@ public abstract class KeyPair {
                 out.write(header[0]);
                 out.write(cr);
                 out.write(header[1]);
-                for (int i = 0; i < iv.length; i++) {
-                    out.write(b2a((byte) ((iv[i] >>> 4) & 0x0f)));
-                    out.write(b2a((byte) (iv[i] & 0x0f)));
+                for (final byte b : iv) {
+                    out.write(b2a((byte) ((b >>> 4) & 0x0f)));
+                    out.write(b2a((byte) (b & 0x0f)));
                 }
                 out.write(cr);
                 out.write(cr);
@@ -165,11 +190,11 @@ public abstract class KeyPair {
             out.write(getEnd());
             out.write(cr);
             //out.close();
-        } catch (Exception e) {
+        } catch (final Exception ignored) {
         }
     }
 
-    private static byte[] space = Util.str2byte(" ");
+    private static final byte[] space = Util.str2byte(" ");
 
     abstract byte[] getKeyTypeName();
 
@@ -193,9 +218,9 @@ public abstract class KeyPair {
      * @param out     output stream
      * @param comment comment
      */
-    public void writePublicKey(java.io.OutputStream out, String comment) {
-        byte[] pubblob = getPublicKeyBlob();
-        byte[] pub = Util.toBase64(pubblob, 0, pubblob.length);
+    public void writePublicKey(final OutputStream out, final String comment) {
+        final byte[] pubblob = getPublicKeyBlob();
+        final byte[] pub = Util.toBase64(pubblob, 0, pubblob.length, true);
         try {
             out.write(getKeyTypeName());
             out.write(space);
@@ -203,7 +228,7 @@ public abstract class KeyPair {
             out.write(space);
             out.write(Util.str2byte(comment));
             out.write(cr);
-        } catch (Exception e) {
+        } catch (final Exception ignored) {
         }
     }
 
@@ -212,10 +237,11 @@ public abstract class KeyPair {
      *
      * @param name    file name
      * @param comment comment
-     * @see #writePublicKey(java.io.OutputStream out, String comment)
+     * @see #writePublicKey(OutputStream out, String comment)
      */
-    public void writePublicKey(String name, String comment) throws java.io.FileNotFoundException, java.io.IOException {
-        FileOutputStream fos = new FileOutputStream(name);
+    public void writePublicKey(final String name, final String comment)
+            throws IOException {
+        final FileOutputStream fos = new FileOutputStream(name);
         writePublicKey(fos, comment);
         fos.close();
     }
@@ -227,9 +253,9 @@ public abstract class KeyPair {
      * @param out     output stream
      * @param comment comment
      */
-    public void writeSECSHPublicKey(java.io.OutputStream out, String comment) {
-        byte[] pubblob = getPublicKeyBlob();
-        byte[] pub = Util.toBase64(pubblob, 0, pubblob.length);
+    public void writeSECSHPublicKey(final OutputStream out, final String comment) {
+        final byte[] pubblob = getPublicKeyBlob();
+        final byte[] pub = Util.toBase64(pubblob, 0, pubblob.length, true);
         try {
             out.write(Util.str2byte("---- BEGIN SSH2 PUBLIC KEY ----"));
             out.write(cr);
@@ -245,7 +271,7 @@ public abstract class KeyPair {
             }
             out.write(Util.str2byte("---- END SSH2 PUBLIC KEY ----"));
             out.write(cr);
-        } catch (Exception e) {
+        } catch (final Exception ignored) {
         }
     }
 
@@ -255,10 +281,11 @@ public abstract class KeyPair {
      *
      * @param name    file name
      * @param comment comment
-     * @see #writeSECSHPublicKey(java.io.OutputStream out, String comment)
+     * @see #writeSECSHPublicKey(OutputStream out, String comment)
      */
-    public void writeSECSHPublicKey(String name, String comment) throws java.io.FileNotFoundException, java.io.IOException {
-        FileOutputStream fos = new FileOutputStream(name);
+    public void writeSECSHPublicKey(final String name, final String comment)
+            throws IOException {
+        final FileOutputStream fos = new FileOutputStream(name);
         writeSECSHPublicKey(fos, comment);
         fos.close();
     }
@@ -269,7 +296,8 @@ public abstract class KeyPair {
      * @param name file name
      * @see #writePrivateKey(String name, byte[] passphrase)
      */
-    public void writePrivateKey(String name) throws java.io.FileNotFoundException, java.io.IOException {
+    public void writePrivateKey(final String name)
+            throws IOException {
         this.writePrivateKey(name, null);
     }
 
@@ -278,10 +306,11 @@ public abstract class KeyPair {
      *
      * @param name       file name
      * @param passphrase a passphrase to encrypt the private key
-     * @see #writePrivateKey(java.io.OutputStream out, byte[] passphrase)
+     * @see #writePrivateKey(OutputStream out, byte[] passphrase)
      */
-    public void writePrivateKey(String name, byte[] passphrase) throws java.io.FileNotFoundException, java.io.IOException {
-        FileOutputStream fos = new FileOutputStream(name);
+    public void writePrivateKey(final String name, final byte[] passphrase)
+            throws IOException {
+        final FileOutputStream fos = new FileOutputStream(name);
         writePrivateKey(fos, passphrase);
         fos.close();
     }
@@ -292,31 +321,37 @@ public abstract class KeyPair {
      * @return finger print
      */
     public String getFingerPrint() {
-        if (hash == null) hash = genHash();
-        byte[] kblob = getPublicKeyBlob();
-        if (kblob == null) return null;
-        return Util.getFingerPrint(hash, kblob);
+        if (hash == null)
+            hash = genHash();
+        final byte[] kblob = getPublicKeyBlob();
+        if (kblob == null)
+            return null;
+        try {
+            return Util.getFingerPrint(hash, kblob, false, true);
+        } catch (final JSchException e) {
+            throw new JSchErrorException(e);
+        }
     }
 
-    private byte[] encrypt(byte[] plain, byte[][] _iv, byte[] passphrase) {
+    private byte[] encrypt(final byte[] plain, final byte[][] _iv, final byte[] passphrase) {
         if (passphrase == null) return plain;
 
         if (cipher == null) cipher = genCipher();
-        byte[] iv = _iv[0] = new byte[cipher.getIVSize()];
+        final byte[] iv = _iv[0] = new byte[cipher.getIVSize()];
 
         if (random == null) random = genRandom();
         random.fill(iv, 0, iv.length);
 
-        byte[] key = genKey(passphrase, iv);
+        final byte[] key = genKey(passphrase, iv);
         byte[] encoded = plain;
 
         // PKCS#5Padding
         {
             //int bsize=cipher.getBlockSize();
-            int bsize = cipher.getIVSize();
-            byte[] foo = new byte[(encoded.length / bsize + 1) * bsize];
+            final int bsize = cipher.getIVSize();
+            final byte[] foo = new byte[(encoded.length / bsize + 1) * bsize];
             System.arraycopy(encoded, 0, foo, 0, encoded.length);
-            int padding = bsize - encoded.length % bsize;
+            final int padding = bsize - encoded.length % bsize;
             for (int i = foo.length - 1; (foo.length - padding) <= i; i--) {
                 foo[i] = (byte) padding;
             }
@@ -326,7 +361,7 @@ public abstract class KeyPair {
         try {
             cipher.init(Cipher.ENCRYPT_MODE, key, iv);
             cipher.update(encoded, 0, encoded.length, encoded, 0);
-        } catch (Exception e) {
+        } catch (final Exception e) {
             //System.err.println(e);
         }
         Util.bzero(key);
@@ -335,28 +370,26 @@ public abstract class KeyPair {
 
     abstract boolean parse(byte[] data);
 
-    private byte[] decrypt(byte[] data, byte[] passphrase, byte[] iv) {
-
+    private byte[] decrypt(final byte[] data, final byte[] passphrase, final byte[] iv) {
         try {
-            byte[] key = genKey(passphrase, iv);
+            final byte[] key = genKey(passphrase, iv);
             cipher.init(Cipher.DECRYPT_MODE, key, iv);
             Util.bzero(key);
-            byte[] plain = new byte[data.length];
+            final byte[] plain = new byte[data.length];
             cipher.update(data, 0, data.length, plain, 0);
             return plain;
-        } catch (Exception e) {
-            //System.err.println(e);
+        } catch (final Exception e) {
+            throw new JSchErrorException(e.getLocalizedMessage(), e);
         }
-        return null;
     }
 
-    int writeSEQUENCE(byte[] buf, int index, int len) {
+    int writeSEQUENCE(final byte[] buf, int index, final int len) {
         buf[index++] = 0x30;
         index = writeLength(buf, index, len);
         return index;
     }
 
-    int writeINTEGER(byte[] buf, int index, byte[] data) {
+    int writeINTEGER(final byte[] buf, int index, final byte[] data) {
         buf[index++] = 0x02;
         index = writeLength(buf, index, data.length);
         System.arraycopy(data, 0, buf, index, data.length);
@@ -364,7 +397,7 @@ public abstract class KeyPair {
         return index;
     }
 
-    int writeOCTETSTRING(byte[] buf, int index, byte[] data) {
+    int writeOCTETSTRING(final byte[] buf, int index, final byte[] data) {
         buf[index++] = 0x04;
         index = writeLength(buf, index, data.length);
         System.arraycopy(data, 0, buf, index, data.length);
@@ -372,7 +405,7 @@ public abstract class KeyPair {
         return index;
     }
 
-    int writeDATA(byte[] buf, byte n, int index, byte[] data) {
+    int writeDATA(final byte[] buf, final byte n, int index, final byte[] data) {
         buf[index++] = n;
         index = writeLength(buf, index, data.length);
         System.arraycopy(data, 0, buf, index, data.length);
@@ -390,14 +423,14 @@ public abstract class KeyPair {
         return i;
     }
 
-    int writeLength(byte[] data, int index, int len) {
+    int writeLength(final byte[] data, int index, int len) {
         int i = countLength(len) - 1;
         if (i == 0) {
             data[index++] = (byte) len;
             return index;
         }
         data[index++] = (byte) (0x80 | i);
-        int j = index + i;
+        final int j = index + i;
         while (i > 0) {
             data[index + i - 1] = (byte) (len & 0xff);
             len >>>= 8;
@@ -409,10 +442,13 @@ public abstract class KeyPair {
     private Random genRandom() {
         if (random == null) {
             try {
-                Class c = Class.forName(jsch.getConfig("random"));
-                random = (Random) (c.newInstance());
-            } catch (Exception e) {
-                System.err.println("connect: random " + e);
+                final Class<? extends Random> c =
+                        Class.forName(JSch.getConfig("random")).asSubclass(Random.class);
+                random = c.getDeclaredConstructor().newInstance();
+            } catch (final Exception e) {
+                jsch.getInstanceLogger().log(Logger.ERROR,
+                        "Unable to load 'random' class", e);
+                throw new JSchErrorException("Unable to load 'random' class: " + e, e);
             }
         }
         return random;
@@ -420,37 +456,42 @@ public abstract class KeyPair {
 
     private HASH genHash() {
         try {
-            Class c = Class.forName(jsch.getConfig("md5"));
-            hash = (HASH) (c.newInstance());
+            final Class<? extends HASH> c =
+                    Class.forName(JSch.getConfig("md5")).asSubclass(HASH.class);
+            hash = c.getDeclaredConstructor().newInstance();
             hash.init();
-        } catch (Exception e) {
+        } catch (final Exception e) {
+            throw new JSchErrorException("Unable to load 'md5' class: " + e, e);
         }
         return hash;
     }
 
     private Cipher genCipher() {
         try {
-            Class c;
-            c = Class.forName(jsch.getConfig("3des-cbc"));
-            cipher = (Cipher) (c.newInstance());
-        } catch (Exception e) {
+            final Class<? extends Cipher> c =
+                    Class.forName(JSch.getConfig("3des-cbc")).asSubclass(Cipher.class);
+            cipher = c.getDeclaredConstructor().newInstance();
+        } catch (final Exception e) {
+            throw new JSchErrorException("Unable to load '3des-cbc' class: " + e, e);
         }
         return cipher;
     }
 
     /*
-      hash is MD5
-      h(0) <- hash(passphrase, iv);
-      h(n) <- hash(h(n-1), passphrase, iv);
-      key <- (h(0),...,h(n))[0,..,key.length];
-    */
-    synchronized byte[] genKey(byte[] passphrase, byte[] iv) {
-        if (cipher == null) cipher = genCipher();
-        if (hash == null) hash = genHash();
+    hash is MD5
+    h(0) <- hash(passphrase, iv);
+    h(n) <- hash(h(n-1), passphrase, iv);
+    key <- (h(0),...,h(n))[0,..,key.length];
+  */
+    synchronized byte[] genKey(final byte[] passphrase, final byte[] iv) {
+        if (cipher == null)
+            cipher = genCipher();
+        if (hash == null)
+            hash = genHash();
 
         byte[] key = new byte[cipher.getBlockSize()];
-        int hsize = hash.getBlockSize();
-        byte[] hn = new byte[key.length / hsize * hsize +
+        final int hsize = hash.getBlockSize();
+        final byte[] hn = new byte[key.length / hsize * hsize +
                 (key.length % hsize == 0 ? 0 : hsize)];
         try {
             byte[] tmp = null;
@@ -478,8 +519,9 @@ public abstract class KeyPair {
                 }
                 System.arraycopy(hn, 0, key, 0, key.length);
             } else if (vendor == VENDOR_PUTTY) {
-                Class c = Class.forName((String) jsch.getConfig("sha-1"));
-                HASH sha1 = (HASH) (c.newInstance());
+                final Class<? extends HASH> c =
+                        Class.forName(JSch.getConfig("sha-1")).asSubclass(HASH.class);
+                final HASH sha1 = c.getDeclaredConstructor().newInstance();
                 tmp = new byte[4];
                 key = new byte[20 * 2];
                 for (int i = 0; i < 2; i++) {
@@ -490,16 +532,17 @@ public abstract class KeyPair {
                     System.arraycopy(sha1.digest(), 0, key, i * 20, 20);
                 }
             }
-        } catch (Exception e) {
-            System.err.println(e);
+        } catch (final Exception e) {
+            throw new JSchErrorException(e.getLocalizedMessage(), e);
         }
         return key;
     }
 
     /**
-     * @deprecated use #writePrivateKey(java.io.OutputStream out, byte[] passphrase)
+     * @deprecated use #writePrivateKey(OutputStream out, byte[] passphrase)
      */
-    public void setPassphrase(String passphrase) {
+    @Deprecated
+    public void setPassphrase(final String passphrase) {
         if (passphrase == null || passphrase.length() == 0) {
             setPassphrase((byte[]) null);
         } else {
@@ -510,10 +553,12 @@ public abstract class KeyPair {
     /**
      * @deprecated use #writePrivateKey(String name, byte[] passphrase)
      */
-    public void setPassphrase(byte[] passphrase) {
+    @Deprecated
+    public void setPassphrase(final byte[] passphrase) {
         if (passphrase != null && passphrase.length == 0)
-            passphrase = null;
-        this.passphrase = passphrase;
+            this.passphrase = null;
+        else
+            this.passphrase = passphrase;
     }
 
     protected boolean encrypted = false;
@@ -525,7 +570,7 @@ public abstract class KeyPair {
         return encrypted;
     }
 
-    public boolean decrypt(String _passphrase) {
+    public boolean decrypt(final String _passphrase) {
         if (_passphrase == null || _passphrase.length() == 0) {
             return !encrypted;
         }
@@ -533,17 +578,16 @@ public abstract class KeyPair {
     }
 
     public boolean decrypt(byte[] _passphrase) {
-
         if (!encrypted) {
             return true;
         }
         if (_passphrase == null) {
             return !encrypted;
         }
-        byte[] bar = new byte[_passphrase.length];
+        final byte[] bar = new byte[_passphrase.length];
         System.arraycopy(_passphrase, 0, bar, 0, bar.length);
         _passphrase = bar;
-        byte[] foo = decrypt(data, _passphrase, iv);
+        final byte[] foo = decrypt(data, _passphrase, iv);
         Util.bzero(_passphrase);
         if (parse(foo)) {
             encrypted = false;
@@ -551,7 +595,8 @@ public abstract class KeyPair {
         return !encrypted;
     }
 
-    public static KeyPair load(JSch jsch, String prvkey) throws JSchException {
+    public static KeyPair load(final JSch jsch, final String prvkey)
+            throws JSchException {
         String pubkey = prvkey + ".pub";
         if (!new File(pubkey).exists()) {
             pubkey = null;
@@ -559,15 +604,16 @@ public abstract class KeyPair {
         return load(jsch, prvkey, pubkey);
     }
 
-    public static KeyPair load(JSch jsch, String prvfile, String pubfile) throws JSchException {
+    public static KeyPair load(final JSch jsch, final String prvfile, final String pubfile)
+            throws JSchException {
 
-        byte[] prvkey = null;
+        final byte[] prvkey;
         byte[] pubkey = null;
 
         try {
             prvkey = Util.fromFile(prvfile);
-        } catch (IOException e) {
-            throw new JSchException(e.toString(), (Throwable) e);
+        } catch (final IOException e) {
+            throw new JSchException(e.toString(), e);
         }
 
         String _pubfile = pubfile;
@@ -577,9 +623,9 @@ public abstract class KeyPair {
 
         try {
             pubkey = Util.fromFile(_pubfile);
-        } catch (IOException e) {
+        } catch (final IOException e) {
             if (pubfile != null) {
-                throw new JSchException(e.toString(), (Throwable) e);
+                throw new JSchException(e.toString(), e);
             }
         }
 
@@ -590,7 +636,8 @@ public abstract class KeyPair {
         }
     }
 
-    public static KeyPair load(JSch jsch, byte[] prvkey, byte[] pubkey) throws JSchException {
+    public static KeyPair load(final JSch jsch, final byte[] prvkey, byte[] pubkey)
+            throws JSchException {
 
         byte[] iv = new byte[8];       // 8
         boolean encrypted = true;
@@ -602,6 +649,8 @@ public abstract class KeyPair {
         int vendor = VENDOR_OPENSSH;
         String publicKeyComment = "";
         Cipher cipher = null;
+        String kdfName = null;
+        byte[] kdfOptions = null;
 
         // prvkey from "ssh-add" command on the remote.
         if (pubkey == null &&
@@ -610,22 +659,26 @@ public abstract class KeyPair {
                         prvkey[0] == 0 && prvkey[1] == 0 && prvkey[2] == 0 &&
                         (prvkey[3] == 7 || prvkey[3] == 19))) {
 
-            Buffer buf = new Buffer(prvkey);
+            final Buffer buf = new Buffer(prvkey);
             buf.skip(prvkey.length);  // for using Buffer#available()
-            String _type = new String(buf.getString()); // ssh-rsa or ssh-dss
+            final String _type = Util.byte2str(buf.getString()); // ssh-rsa or ssh-dss
             buf.rewind();
 
-            KeyPair kpair = null;
-            if (_type.equals("ssh-rsa")) {
-                kpair = KeyPairRSA.fromSSHAgent(jsch, buf);
-            } else if (_type.equals("ssh-dss")) {
-                kpair = KeyPairDSA.fromSSHAgent(jsch, buf);
-            } else if (_type.equals("ecdsa-sha2-nistp256") ||
-                    _type.equals("ecdsa-sha2-nistp384") ||
-                    _type.equals("ecdsa-sha2-nistp521")) {
-                kpair = KeyPairECDSA.fromSSHAgent(jsch, buf);
-            } else {
-                throw new JSchException("privatekey: invalid key " + new String(prvkey, 4, 7));
+            final KeyPair kpair;
+            switch (_type) {
+                case "ssh-rsa":
+                    kpair = KeyPairRSA.fromSSHAgent(jsch, buf);
+                    break;
+                case "ssh-dss":
+                    kpair = KeyPairDSA.fromSSHAgent(jsch, buf);
+                    break;
+                case "ecdsa-sha2-nistp256":
+                case "ecdsa-sha2-nistp384":
+                case "ecdsa-sha2-nistp521":
+                    kpair = KeyPairECDSA.fromSSHAgent(jsch, buf);
+                    break;
+                default:
+                    throw new JSchException("privatekey: invalid key " + Util.byte2str(prvkey, 4, 7));
             }
             return kpair;
         }
@@ -634,7 +687,7 @@ public abstract class KeyPair {
             byte[] buf = prvkey;
 
             if (buf != null) {
-                KeyPair ppk = loadPPK(jsch, buf);
+                final KeyPair ppk = loadPPK(jsch, buf);
                 if (ppk != null)
                     return ppk;
             }
@@ -656,7 +709,7 @@ public abstract class KeyPair {
                 if (buf[i] == 'B' && i + 3 < len && buf[i + 1] == 'E' && buf[i + 2] == 'G' && buf[i + 3] == 'I') {
                     i += 6;
                     if (i + 2 >= len)
-                        throw new JSchException("invalid privatekey: " + prvkey);
+                        throw new JSchException("invalid privatekey");
                     if (buf[i] == 'D' && buf[i + 1] == 'S' && buf[i + 2] == 'A') {
                         type = DSA;
                     } else if (buf[i] == 'R' && buf[i + 1] == 'S' && buf[i + 2] == 'A') {
@@ -682,8 +735,12 @@ public abstract class KeyPair {
                         type = UNKNOWN;
                         vendor = VENDOR_PKCS8;
                         i += 5;
+
+                    } else if (isOpenSSHPrivateKey(buf, i, len)) {
+                        type = UNKNOWN;
+                        vendor = VENDOR_OPENSSH_V1;
                     } else {
-                        throw new JSchException("invalid privatekey: " + prvkey);
+                        throw new JSchException("invalid privatekey");
                     }
                     i += 3;
                     continue;
@@ -691,39 +748,45 @@ public abstract class KeyPair {
                 if (buf[i] == 'A' && i + 7 < len && buf[i + 1] == 'E' && buf[i + 2] == 'S' && buf[i + 3] == '-' &&
                         buf[i + 4] == '2' && buf[i + 5] == '5' && buf[i + 6] == '6' && buf[i + 7] == '-') {
                     i += 8;
-                    if (Session.checkCipher((String) jsch.getConfig("aes256-cbc"))) {
-                        Class c = Class.forName((String) jsch.getConfig("aes256-cbc"));
-                        cipher = (Cipher) (c.newInstance());
+                    if (Session.checkCipher(JSch.getConfig("aes256-cbc"))) {
+                        final Class<? extends Cipher> c =
+                                Class.forName(JSch.getConfig("aes256-cbc"))
+                                        .asSubclass(Cipher.class);
+                        cipher = c.getDeclaredConstructor().newInstance();
                         // key=new byte[cipher.getBlockSize()];
                         iv = new byte[cipher.getIVSize()];
                     } else {
-                        throw new JSchException("privatekey: aes256-cbc is not available " + prvkey);
+                        throw new JSchException("privatekey: aes256-cbc is not available");
                     }
                     continue;
                 }
                 if (buf[i] == 'A' && i + 7 < len && buf[i + 1] == 'E' && buf[i + 2] == 'S' && buf[i + 3] == '-' &&
                         buf[i + 4] == '1' && buf[i + 5] == '9' && buf[i + 6] == '2' && buf[i + 7] == '-') {
                     i += 8;
-                    if (Session.checkCipher((String) jsch.getConfig("aes192-cbc"))) {
-                        Class c = Class.forName((String) jsch.getConfig("aes192-cbc"));
-                        cipher = (Cipher) (c.newInstance());
+                    if (Session.checkCipher(JSch.getConfig("aes192-cbc"))) {
+                        final Class<? extends Cipher> c =
+                                Class.forName(JSch.getConfig("aes192-cbc"))
+                                        .asSubclass(Cipher.class);
+                        cipher = c.getDeclaredConstructor().newInstance();
                         // key=new byte[cipher.getBlockSize()];
                         iv = new byte[cipher.getIVSize()];
                     } else {
-                        throw new JSchException("privatekey: aes192-cbc is not available " + prvkey);
+                        throw new JSchException("privatekey: aes192-cbc is not available");
                     }
                     continue;
                 }
                 if (buf[i] == 'A' && i + 7 < len && buf[i + 1] == 'E' && buf[i + 2] == 'S' && buf[i + 3] == '-' &&
                         buf[i + 4] == '1' && buf[i + 5] == '2' && buf[i + 6] == '8' && buf[i + 7] == '-') {
                     i += 8;
-                    if (Session.checkCipher((String) jsch.getConfig("aes128-cbc"))) {
-                        Class c = Class.forName((String) jsch.getConfig("aes128-cbc"));
-                        cipher = (Cipher) (c.newInstance());
+                    if (Session.checkCipher(JSch.getConfig("aes128-cbc"))) {
+                        final Class<? extends Cipher> c =
+                                Class.forName(JSch.getConfig("aes128-cbc"))
+                                        .asSubclass(Cipher.class);
+                        cipher = c.getDeclaredConstructor().newInstance();
                         // key=new byte[cipher.getBlockSize()];
                         iv = new byte[cipher.getIVSize()];
                     } else {
-                        throw new JSchException("privatekey: aes128-cbc is not available " + prvkey);
+                        throw new JSchException("privatekey: aes128-cbc is not available");
                     }
                     continue;
                 }
@@ -770,7 +833,7 @@ public abstract class KeyPair {
             if (buf != null) {
 
                 if (type == ERROR) {
-                    throw new JSchException("invalid privatekey: " + prvkey);
+                    throw new JSchException("invalid privatekey");
                 }
 
                 int start = i;
@@ -782,13 +845,13 @@ public abstract class KeyPair {
                 }
 
                 if ((len - i) == 0 || (i - start) == 0) {
-                    throw new JSchException("invalid privatekey: " + prvkey);
+                    throw new JSchException("invalid privatekey");
                 }
 
                 // The content of 'buf' will be changed, so it should be copied.
-                byte[] tmp = new byte[i - start];
+                final byte[] tmp = new byte[i - start];
                 System.arraycopy(buf, start, tmp, 0, tmp.length);
-                byte[] _buf = tmp;
+                final byte[] _buf = tmp;
 
                 start = 0;
                 i = 0;
@@ -796,7 +859,7 @@ public abstract class KeyPair {
                 int _len = _buf.length;
                 while (i < _len) {
                     if (_buf[i] == 0x0a) {
-                        boolean xd = (_buf[i - 1] == 0x0d);
+                        final boolean xd = (_buf[i - 1] == 0x0d);
                         // ignore 0x0a (or 0x0d0x0a)
                         System.arraycopy(_buf, i + 1, _buf, i - (xd ? 1 : 0), _len - (i + 1));
                         if (xd) _len--;
@@ -822,29 +885,70 @@ public abstract class KeyPair {
                     data[2] == (byte) 0xf9 &&
                     data[3] == (byte) 0xeb) {
 
-                Buffer _buf = new Buffer(data);
+                final Buffer _buf = new Buffer(data);
                 _buf.getInt();  // 0x3f6ff9be
                 _buf.getInt();
-                byte[] _type = _buf.getString();
-                //System.err.println("type: "+new String(_type));
-                String _cipher = Util.byte2str(_buf.getString());
+                final byte[] _type = _buf.getString();
+                //System.err.println("type: "+Util.byte2str(_type));
+                final String _cipher = Util.byte2str(_buf.getString());
                 //System.err.println("cipher: "+_cipher);
-                if (_cipher.equals("3des-cbc")) {
-                    _buf.getInt();
-                    byte[] foo = new byte[data.length - _buf.getOffSet()];
-                    _buf.getByte(foo);
-                    data = foo;
-                    encrypted = true;
-                    throw new JSchException("unknown privatekey format: " + prvkey);
-                } else if (_cipher.equals("none")) {
-                    _buf.getInt();
-                    _buf.getInt();
+                switch (_cipher) {
+                    case "3des-cbc": {
+                        _buf.getInt();
+                        final byte[] foo = new byte[data.length - _buf.getOffSet()];
+                        _buf.getByte(foo);
+                        data = foo;
+                        encrypted = true;
+                        throw new JSchException("unknown privatekey format"); // TODO: investigate
+                    }
+                    case "none": {
+                        _buf.getInt();
+                        _buf.getInt();
 
+                        encrypted = false;
+
+                        final byte[] foo = new byte[data.length - _buf.getOffSet()];
+                        _buf.getByte(foo);
+                        data = foo;
+                        break;
+                    }
+                }
+            }
+            // OPENSSH V1 PRIVATE KEY
+            else if (data != null &&
+                    Util.array_equals(AUTH_MAGIC, Arrays.copyOfRange(data, 0, AUTH_MAGIC.length))) {
+
+                vendor = VENDOR_OPENSSH_V1;
+                final Buffer buffer = new Buffer(data);
+                final byte[] magic = new byte[AUTH_MAGIC.length];
+                buffer.getByte(magic);
+
+                final String cipherName = Util.byte2str(buffer.getString());
+                kdfName = Util.byte2str(buffer.getString()); // string kdfname
+                kdfOptions = buffer.getString(); // string kdfoptions
+
+                final int nrKeys = buffer.getInt(); // int number of keys N; Should be 1
+                if (nrKeys != 1) {
+                    throw new IOException("We don't support having more than 1 key in the file (yet).");
+                }
+
+                pubkey = buffer.getString();
+
+                if ("none".equals(cipherName)) {
                     encrypted = false;
-
-                    byte[] foo = new byte[data.length - _buf.getOffSet()];
-                    _buf.getByte(foo);
-                    data = foo;
+                    data = buffer.getString();
+                    type = readOpenSSHKeyv1(data);
+                } else if (Session.checkCipher(JSch.getConfig(cipherName))) {
+                    encrypted = true;
+                    final Class<? extends Cipher> c =
+                            Class.forName(JSch.getConfig(cipherName))
+                                    .asSubclass(Cipher.class);
+                    cipher = c.getDeclaredConstructor().newInstance();
+                    data = buffer.getString();
+                    // the type can only be determined after encryption, so we take this intermediate here:
+                    type = DEFERRED;
+                } else {
+                    throw new JSchException("cipher " + cipherName + " is not available");
                 }
             }
 
@@ -885,7 +989,7 @@ public abstract class KeyPair {
                             valid = false;
                         }
 
-                        int start = i;
+                        final int start = i;
                         while (valid && i < len) {
                             if (buf[i] == 0x0a) {
                                 System.arraycopy(buf, i + 1, buf, i, len - i - 1);
@@ -924,7 +1028,7 @@ public abstract class KeyPair {
                             }
                             i++;
                             if (i < len) {
-                                int start = i;
+                                final int start = i;
                                 while (i < len) {
                                     if (buf[i] == ' ') break;
                                     i++;
@@ -932,14 +1036,14 @@ public abstract class KeyPair {
                                 publickeyblob = Util.fromBase64(buf, start, i - start);
                             }
                             if (i++ < len) {
-                                int start = i;
+                                final int start = i;
                                 while (i < len) {
                                     if (buf[i] == '\n') break;
                                     i++;
                                 }
                                 if (i > 0 && buf[i - 1] == 0x0d) i--;
                                 if (start < i) {
-                                    publicKeyComment = new String(buf, start, i - start);
+                                    publicKeyComment = Util.byte2str(buf, start, i - start);
                                 }
                             }
                         } else if (buf[0] == 'e' && buf[1] == 'c' && buf[2] == 'd' && buf[3] == 's') {
@@ -953,7 +1057,7 @@ public abstract class KeyPair {
                             }
                             i++;
                             if (i < len) {
-                                int start = i;
+                                final int start = i;
                                 while (i < len) {
                                     if (buf[i] == ' ') break;
                                     i++;
@@ -961,29 +1065,31 @@ public abstract class KeyPair {
                                 publickeyblob = Util.fromBase64(buf, start, i - start);
                             }
                             if (i++ < len) {
-                                int start = i;
+                                final int start = i;
                                 while (i < len) {
                                     if (buf[i] == '\n') break;
                                     i++;
                                 }
                                 if (i > 0 && buf[i - 1] == 0x0d) i--;
                                 if (start < i) {
-                                    publicKeyComment = new String(buf, start, i - start);
+                                    publicKeyComment = Util.byte2str(buf, start, i - start);
                                 }
                             }
                         }
                     }
-                } catch (Exception ee) {
+                } catch (final Exception ignored) {
                 }
             }
-        } catch (Exception e) {
+        } catch (final Exception e) {
             if (e instanceof JSchException) throw (JSchException) e;
-            if (e instanceof Throwable)
-                throw new JSchException(e.toString(), (Throwable) e);
-            throw new JSchException(e.toString());
+            throw new JSchException(e.toString(), e);
         }
 
-        KeyPair kpair = null;
+        return getKeyPair(jsch, prvkey, pubkey, iv, encrypted, data, publickeyblob, type, vendor, publicKeyComment, cipher, kdfName, kdfOptions);
+    }
+
+    static KeyPair getKeyPair(final JSch jsch, final byte[] prvkey, final byte[] pubkey, final byte[] iv, final boolean encrypted, final byte[] data, final byte[] publickeyblob, final int type, final int vendor, final String publicKeyComment, final Cipher cipher, final String kdfName, final byte[] kdfOptions) throws JSchException {
+        final KeyPair kpair;
         if (type == DSA) {
             kpair = new KeyPairDSA(jsch);
         } else if (type == RSA) {
@@ -992,6 +1098,10 @@ public abstract class KeyPair {
             kpair = new KeyPairECDSA(jsch, pubkey);
         } else if (vendor == VENDOR_PKCS8) {
             kpair = new KeyPairPKCS8(jsch);
+        } else if (type == DEFERRED) {
+            kpair = new KeyPairDeferred(jsch);
+        } else {
+            kpair = null;
         }
 
         if (kpair != null) {
@@ -1000,9 +1110,10 @@ public abstract class KeyPair {
             kpair.vendor = vendor;
             kpair.publicKeyComment = publicKeyComment;
             kpair.cipher = cipher;
+            kpair.kdfName = kdfName;
+            kpair.kdfOptions = kdfOptions;
 
             if (encrypted) {
-                kpair.encrypted = true;
                 kpair.iv = iv;
                 kpair.data = data;
             } else {
@@ -1010,7 +1121,7 @@ public abstract class KeyPair {
                     kpair.encrypted = false;
                     return kpair;
                 } else {
-                    throw new JSchException("invalid privatekey: " + prvkey);
+                    throw new JSchException("invalid privatekey");
                 }
             }
         }
@@ -1018,12 +1129,52 @@ public abstract class KeyPair {
         return kpair;
     }
 
-    static private byte a2b(byte c) {
+    /**
+     * reads openssh key v1 format and returns key type.
+     *
+     * @param data
+     * @return key type 1=DSA, 2=RSA, 3=ECDSA, 4=UNKNOWN, 5=ED25519, 6=ED448
+     * @throws IOException
+     * @throws JSchException
+     */
+    static int readOpenSSHKeyv1(final byte[] data) throws IOException, JSchException {
+
+        if (data.length % 8 != 0) {
+            throw new IOException("The private key section must be a multiple of the block size (8)");
+        }
+
+        final Buffer prvKEyBuffer = new Buffer(data);
+        final int checkInt1 = prvKEyBuffer.getInt(); // uint32 checkint1
+        final int checkInt2 = prvKEyBuffer.getInt(); // uint32 checkint2
+        if (checkInt1 != checkInt2) {
+            throw new JSchException("openssh v1 key check failed. Wrong passphrase?");
+        }
+
+        // The private key section contains both the public key and the private key
+        final String keyType = Util.byte2str(prvKEyBuffer.getString()); // string keytype
+
+        if (keyType.equalsIgnoreCase("ssh-rsa")) {
+            return RSA;
+        } else if (keyType.startsWith("ssh-dss")) {
+            return DSA;
+        } else if (keyType.startsWith("ecdsa-sha2")) {
+            return ECDSA;
+        } else
+            throw new JSchException("keytype " + keyType + " not supported as part of openssh v1 format");
+
+    }
+
+    private static boolean isOpenSSHPrivateKey(final byte[] buf, final int i, final int len) {
+        final String ident = "OPENSSH PRIVATE KEY-----";
+        return i + ident.length() < len && ident.equals(Util.byte2str(Arrays.copyOfRange(buf, i, i + ident.length())));
+    }
+
+    private static byte a2b(final byte c) {
         if ('0' <= c && c <= '9') return (byte) (c - '0');
         return (byte) (c - 'a' + 10);
     }
 
-    static private byte b2a(byte c) {
+    private static byte b2a(final byte c) {
         if (0 <= c && c <= 9) return (byte) (c + '0');
         return (byte) (c - 10 + 'A');
     }
@@ -1032,7 +1183,8 @@ public abstract class KeyPair {
         Util.bzero(passphrase);
     }
 
-    public void finalize() {
+    @Override
+    protected void finalize() {
         dispose();
     }
 
@@ -1051,25 +1203,25 @@ public abstract class KeyPair {
             "Private-MAC: "
     };
 
-    static KeyPair loadPPK(JSch jsch, byte[] buf) throws JSchException {
+    static KeyPair loadPPK(final JSch jsch, final byte[] buf) throws JSchException {
         byte[] pubkey = null;
         byte[] prvkey = null;
         int lines = 0;
 
-        Buffer buffer = new Buffer(buf);
-        java.util.Hashtable v = new java.util.Hashtable();
+        final Buffer buffer = new Buffer(buf);
+        final Map<String, String> v = new HashMap<>();
 
         while (true) {
             if (!parseHeader(buffer, v))
                 break;
         }
 
-        String typ = (String) v.get("PuTTY-User-Key-File-2");
+        final String typ = v.get("PuTTY-User-Key-File-2");
         if (typ == null) {
             return null;
         }
 
-        lines = Integer.parseInt((String) v.get("Public-Lines"));
+        lines = Integer.parseInt(v.get("Public-Lines"));
         pubkey = parseLines(buffer, lines);
 
         while (true) {
@@ -1077,7 +1229,7 @@ public abstract class KeyPair {
                 break;
         }
 
-        lines = Integer.parseInt((String) v.get("Private-Lines"));
+        lines = Integer.parseInt(v.get("Private-Lines"));
         prvkey = parseLines(buffer, lines);
 
         while (true) {
@@ -1090,53 +1242,61 @@ public abstract class KeyPair {
 
         KeyPair kpair = null;
 
-        if (typ.equals("ssh-rsa")) {
+        switch (typ) {
+            case "ssh-rsa": {
+                final Buffer _buf = new Buffer(pubkey);
+                _buf.skip(pubkey.length);
 
-            Buffer _buf = new Buffer(pubkey);
-            _buf.skip(pubkey.length);
+                final int len = _buf.getInt();
+                _buf.getByte(new byte[len]);             // ssh-rsa
 
-            int len = _buf.getInt();
-            _buf.getByte(new byte[len]);             // ssh-rsa
-            byte[] pub_array = new byte[_buf.getInt()];
-            _buf.getByte(pub_array);
-            byte[] n_array = new byte[_buf.getInt()];
-            _buf.getByte(n_array);
+                final byte[] pub_array = new byte[_buf.getInt()];
+                _buf.getByte(pub_array);
+                final byte[] n_array = new byte[_buf.getInt()];
+                _buf.getByte(n_array);
 
-            kpair = new KeyPairRSA(jsch, n_array, pub_array, null);
-        } else if (typ.equals("ssh-dss")) {
-            Buffer _buf = new Buffer(pubkey);
-            _buf.skip(pubkey.length);
+                kpair = new KeyPairRSA(jsch,
+                        n_array, pub_array, null);
+                break;
+            }
+            case "ssh-dss": {
+                final Buffer _buf = new Buffer(pubkey);
+                _buf.skip(pubkey.length);
 
-            int len = _buf.getInt();
-            _buf.getByte(new byte[len]);              // ssh-dss
+                final int len = _buf.getInt();
+                _buf.getByte(new byte[len]);              // ssh-dss
 
-            byte[] p_array = new byte[_buf.getInt()];
-            _buf.getByte(p_array);
-            byte[] q_array = new byte[_buf.getInt()];
-            _buf.getByte(q_array);
-            byte[] g_array = new byte[_buf.getInt()];
-            _buf.getByte(g_array);
-            byte[] y_array = new byte[_buf.getInt()];
-            _buf.getByte(y_array);
 
-            kpair = new KeyPairDSA(jsch, p_array, q_array, g_array, y_array, null);
-        } else {
-            return null;
+                final byte[] p_array = new byte[_buf.getInt()];
+                _buf.getByte(p_array);
+                final byte[] q_array = new byte[_buf.getInt()];
+                _buf.getByte(q_array);
+                final byte[] g_array = new byte[_buf.getInt()];
+                _buf.getByte(g_array);
+                final byte[] y_array = new byte[_buf.getInt()];
+                _buf.getByte(y_array);
+
+                kpair = new KeyPairDSA(jsch,
+                        p_array, q_array, g_array,
+                        y_array, null);
+                break;
+            }
+            default:
+                return null;
         }
-
-        if (kpair == null)
-            return null;
 
         kpair.encrypted = !v.get("Encryption").equals("none");
         kpair.vendor = VENDOR_PUTTY;
-        kpair.publicKeyComment = (String) v.get("Comment");
+        kpair.publicKeyComment = v.get("Comment");
         if (kpair.encrypted) {
-            if (Session.checkCipher((String) jsch.getConfig("aes256-cbc"))) {
+            if (Session.checkCipher(JSch.getConfig("aes256-cbc"))) {
                 try {
-                    Class c = Class.forName((String) jsch.getConfig("aes256-cbc"));
-                    kpair.cipher = (Cipher) (c.newInstance());
+                    final Class<? extends Cipher> c =
+                            Class.forName(JSch.getConfig("aes256-cbc"))
+                                    .asSubclass(Cipher.class);
+                    kpair.cipher = c.getDeclaredConstructor().newInstance();
                     kpair.iv = new byte[kpair.cipher.getIVSize()];
-                } catch (Exception e) {
+                } catch (final Exception e) {
                     throw new JSchException("The cipher 'aes256-cbc' is required, but it is not available.");
                 }
             } else {
@@ -1150,8 +1310,8 @@ public abstract class KeyPair {
         return kpair;
     }
 
-    private static byte[] parseLines(Buffer buffer, int lines) {
-        byte[] buf = buffer.buffer;
+    private static byte[] parseLines(final Buffer buffer, int lines) {
+        final byte[] buf = buffer.buffer;
         int index = buffer.index;
         byte[] data = null;
 
@@ -1163,10 +1323,10 @@ public abstract class KeyPair {
                         data = new byte[i - index - 1];
                         System.arraycopy(buf, index, data, 0, i - index - 1);
                     } else {
-                        byte[] tmp = new byte[data.length + i - index - 1];
+                        final byte[] tmp = new byte[data.length + i - index - 1];
                         System.arraycopy(data, 0, tmp, 0, data.length);
                         System.arraycopy(buf, index, tmp, data.length, i - index - 1);
-                        for (int j = 0; j < data.length; j++) data[j] = 0; // clear
+                        Arrays.fill(data, (byte) 0); // clear
                         data = tmp;
                     }
                     break;
@@ -1183,8 +1343,8 @@ public abstract class KeyPair {
         return data;
     }
 
-    private static boolean parseHeader(Buffer buffer, java.util.Hashtable v) {
-        byte[] buf = buffer.buffer;
+    private static boolean parseHeader(final Buffer buffer, final Map<String, String> v) {
+        final byte[] buf = buffer.buffer;
         int index = buffer.index;
         String key = null;
         String value = null;
@@ -1193,7 +1353,7 @@ public abstract class KeyPair {
                 break;
             }
             if (buf[i] == ':') {
-                key = new String(buf, index, i - index);
+                key = Util.byte2str(buf, index, i - index);
                 i++;
                 if (i < buf.length && buf[i] == ' ') {
                     i++;
@@ -1208,7 +1368,7 @@ public abstract class KeyPair {
 
         for (int i = index; i < buf.length; i++) {
             if (buf[i] == 0x0d) {
-                value = new String(buf, index, i - index);
+                value = Util.byte2str(buf, index, i - index);
                 i++;
                 if (i < buf.length && buf[i] == 0x0a) {
                     i++;
@@ -1223,29 +1383,30 @@ public abstract class KeyPair {
             buffer.index = index;
         }
 
-        return (key != null && value != null);
+        return value != null;
     }
 
-    void copy(KeyPair kpair) {
+    void copy(final KeyPair kpair) {
         this.publickeyblob = kpair.publickeyblob;
         this.vendor = kpair.vendor;
         this.publicKeyComment = kpair.publicKeyComment;
         this.cipher = kpair.cipher;
     }
 
-    class ASN1Exception extends Exception {
+    static final class ASN1Exception extends Exception {
+        private static final long serialVersionUID = -1L;
     }
 
-    class ASN1 {
-        byte[] buf;
-        int start;
-        int length;
+    static final class ASN1 {
+        private final byte[] buf;
+        private final int start;
+        private final int length;
 
-        ASN1(byte[] buf) throws ASN1Exception {
+        ASN1(final byte[] buf) throws ASN1Exception {
             this(buf, 0, buf.length);
         }
 
-        ASN1(byte[] buf, int start, int length) throws ASN1Exception {
+        ASN1(final byte[] buf, final int start, final int length) throws ASN1Exception {
             this.buf = buf;
             this.start = start;
             this.length = length;
@@ -1273,7 +1434,7 @@ public abstract class KeyPair {
             return getType() == (0x04 & 0xff);
         }
 
-        private int getLength(int[] indexp) {
+        private int getLength(final int[] indexp) {
             int index = indexp[0];
             int length = buf[index++] & 0xff;
             if ((length & 0x80) != 0) {
@@ -1288,40 +1449,40 @@ public abstract class KeyPair {
         }
 
         byte[] getContent() {
-            int[] indexp = new int[1];
+            final int[] indexp = new int[1];
             indexp[0] = start + 1;
-            int length = getLength(indexp);
-            int index = indexp[0];
-            byte[] tmp = new byte[length];
+            final int length = getLength(indexp);
+            final int index = indexp[0];
+            final byte[] tmp = new byte[length];
             System.arraycopy(buf, index, tmp, 0, tmp.length);
             return tmp;
         }
 
         ASN1[] getContents() throws ASN1Exception {
-            int typ = buf[start];
-            int[] indexp = new int[1];
+            final int typ = buf[start];
+            final int[] indexp = new int[1];
             indexp[0] = start + 1;
             int length = getLength(indexp);
             if (typ == 0x05) {
                 return new ASN1[0];
             }
             int index = indexp[0];
-            java.util.Vector values = new java.util.Vector();
+            final List<ASN1> values = new ArrayList<>();
             while (length > 0) {
                 index++;
                 length--;
-                int tmp = index;
+                final int tmp = index;
                 indexp[0] = index;
-                int l = getLength(indexp);
+                final int l = getLength(indexp);
                 index = indexp[0];
                 length -= (index - tmp);
-                values.addElement(new ASN1(buf, tmp - 1, 1 + (index - tmp) + l));
+                values.add(new ASN1(buf, tmp - 1, 1 + (index - tmp) + l));
                 index += l;
                 length -= l;
             }
-            ASN1[] result = new ASN1[values.size()];
+            final ASN1[] result = new ASN1[values.size()];
             for (int i = 0; i < values.size(); i++) {
-                result[i] = (ASN1) values.elementAt(i);
+                result[i] = values.get(i);
             }
             return result;
         }
